tdf#134648 DOCX import: fix bottom auto margin of subitem

If style based spacing was set to auto in the previous
list item, style of the actual paragraph must be the same
to guarantee the same auto setting.

Regression from commit 9cca15204af9cc44a8a9528ccf2f36616fb70e69
(tdf#133052: DOCX import: fix top auto margin of subitems).

Change-Id: I39d2bad03a659a407b52550768b010cfa716d363
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/99096
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>